--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   <link rel="stylesheet" href="css/materialize.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
   <div class="navbar-fixed">
     <nav>
@@ -33,12 +35,12 @@
       <form>
         <div class="col offset-s2 s7">
           <div class="input-field">
-            <input type="text" placeholder="Enter movie title e.g. Jumanji" id="search" name="search" />
+            <input type="text" placeholder="Enter movie title e.g. Jumanji" id="search" name="search" required />
           </div>
         </div>
 
         <div class="col s3">
-          <button class="btn-large waves-effect waves-light" type="submit" name="action">
+          <button class="btn-large waves-effect waves-light" type="submit" name="action" id="action">
             <i class="material-icons right">search</i>
             Search
           </button>
@@ -75,4 +77,5 @@
     </div>
   </footer>
 </body>
+
 </html>
